# magic_crawler

./: README.md  requirements.txt  setup.cfg
magic_crawler/: __init__.py  crawler.py  extract_text_from_url_crawler_jina.py  extract_text_from_url_crawler_local.py  extract_text_from_url_crawler_pro.py
