[metadata]
name = magic_crawler
version = attr: magic_crawler.__version__
author = Andres
author_email = andres@arz.ai
description = Simple crawler for extracting MD content for LLM applications
long_description = file: README.md
long_description_content_type = text/markdown
keywords = llm, crawler, markdown
[options]
zip_safe = True
include_package_data = True